Saving work on Async interface redesign

--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
     "require" : {
     },
     "autoload": {
-        "psr-4": {
-            "": "src/"
+        "psr-0": {
+            "FutoIn\\": "src/"
         }
     }
 }
